initial implementation for Analysis Arab Countries

--- a/TwitteR Analysis MKH/www/html/profile.html
+++ b/TwitteR Analysis MKH/www/html/profile.html
@@ -8,7 +8,7 @@
     <div id="userProfile">
         <div id="userDetailsInfo">
             <div id="userImage">
-                <a id ="userProfileImg" href="" style="cursor:zoom-in;" data-lightbox="UserImage" data-title="User Profile Image">
+                <a id ="userProfileImg" href="" style="cursor:zoom-in;" data-lightbox="UserImage" data-title="Profile Image">
                     <img id="userProfileImage" src="" width="200" height="200">
                 </a>
             </div>
