Tweaks to countries analysis and plotting

--- a/TwitteR Analysis MKH/www/html/profile.html
+++ b/TwitteR Analysis MKH/www/html/profile.html
@@ -1,6 +1,6 @@
 
 <div class="getUserInfo">
-    {{ div(style="display: inline-block;vertical-align:top; width: 150px; margin-right:35px;", textInput("userId", "User ID :", "youm7") )}}
+    {{ div(style="display: inline-block;vertical-align:top; width: 150px; margin-right:35px;", textInput("userId", "User ID :", "") )}}
     {{  withBusyIndicatorUI( actionButton("getUser", "Analyze Profile") )}}
 </div>
 <div id="userAnalysisInfo">
