handle case which profile is protected

--- a/TwitteR Analysis MKH/ui/UIHTML/profile.html
+++ b/TwitteR Analysis MKH/ui/UIHTML/profile.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-	<div id="userProfileStatistics">
+	<div id="userProfileAnalysis">
 		<div class = "blockHeader">
 			<span>Profile Analysis</span>
 		</div>
