--- a/TwitteR Analysis MKH/ui/UIHTML/profile.html
+++ b/TwitteR Analysis MKH/ui/UIHTML/profile.html
@@ -28,7 +28,7 @@
     </div>
 	<div id="userProfileAnalysis">
 		<div id="profileAnalysisHeader" class = "blockHeader">
-			<span>Profile Analysis</span>
+			<span><span class="fa fa-bar-chart"></span>&nbsp;Profile Analysis</span>
 		</div>
 		<div class = "blockContent">
 			<span class="twoElementInRow">
